--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <java.version>1.8</java.version>
         <java.encoding>UTF-8</java.encoding>
         <project.build.sourceEncoding>${java.encoding}</project.build.sourceEncoding>
-        <junit.version>4.12</junit.version>
+        <springfox.version>2.9.2</springfox.version>
     </properties>
 
     <parent>
