update pom.xml file info

--- a/helloapp/pom.xml
+++ b/helloapp/pom.xml
@@ -25,5 +25,12 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>${springfox.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+        </dependency>
+
     </dependencies>
 </project>
