--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <java.encoding>UTF-8</java.encoding>
         <project.build.sourceEncoding>${java.encoding}</project.build.sourceEncoding>
         <springfox.version>2.9.2</springfox.version>
+        <lombok.version>1.18.2</lombok.version>
     </properties>
 
     <parent>
